--- a/.kokoro/presubmit/common.cfg
+++ b/.kokoro/presubmit/common.cfg
@@ -12,11 +12,11 @@ action {
 gfile_resources: "/bigstore/cloud-devrel-kokoro-resources/trampoline"
 
 # Use the trampoline script to run in docker.
-build_file: "google-cloud-java/.kokoro/trampoline.sh"
+build_file: "java-bigquery/.kokoro/trampoline.sh"
 
 env_vars: {
   key: "TRAMPOLINE_BUILD_FILE"
-  value: "github/google-cloud-java/.kokoro/build.sh"
+  value: "github/java-bigquery/.kokoro/build.sh"
 }
 
 env_vars: {
