--- a/.kokoro/presubmit/linkage-monitor.cfg
+++ b/.kokoro/presubmit/linkage-monitor.cfg
@@ -8,5 +8,5 @@ env_vars: {
 
 env_vars: {
   key: "TRAMPOLINE_BUILD_FILE"
-  value: "github/google-cloud-java/.kokoro/linkage-monitor.sh"
+  value: "github/java-bigquery/.kokoro/linkage-monitor.sh"
 }
