--- a/.kokoro/release/drop.cfg
+++ b/.kokoro/release/drop.cfg
@@ -2,5 +2,5 @@
 
 env_vars: {
   key: "TRAMPOLINE_BUILD_FILE"
-  value: "github/google-cloud-java/.kokoro/release/drop.sh"
+  value: "github/java-bigquery/.kokoro/release/drop.sh"
 }
