--- a/.kokoro/release/stage.cfg
+++ b/.kokoro/release/stage.cfg
@@ -2,14 +2,14 @@
 
 env_vars: {
   key: "TRAMPOLINE_BUILD_FILE"
-  value: "github/google-cloud-java/.kokoro/release/stage.sh"
+  value: "github/java-bigquery/.kokoro/release/stage.sh"
 }
 
 # Need to save the properties file
 action {
   define_artifacts {
-    regex: "github/google-cloud-java/target/nexus-staging/staging/*.properties"
-    strip_prefix: "github/google-cloud-java"
+    regex: "github/java-bigquery/target/nexus-staging/staging/*.properties"
+    strip_prefix: "github/java-bigquery"
   }
 }
 
