--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,8 @@
 
   <modules>
     <module>google-cloud-bigquery</module>
-  <module>google-cloud-bigquery-bom</module>
+    <module>google-cloud-bigquery-bom</module>
+    <module>samples</module>
   </modules>
 
   <reporting>
