--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -44,14 +44,19 @@
     </dependency>
     <!-- [END bigquery_java_dependencies] -->
     <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-      <version>1.4</version>
+      <groupId>com.google.api</groupId>
+      <artifactId>gax</artifactId>
+      <version>1.49.1</version>
     </dependency>
     <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-      <version>2.10.5</version>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-core</artifactId>
+      <version>1.91.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.auth</groupId>
+      <artifactId>google-auth-library-oauth2-http</artifactId>
+      <version>0.18.0</version>
     </dependency>
 
     <!-- Test dependencies -->
