--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,10 @@
     </plugins>
   </build>
 
+  <modules>
+    <module>google-cloud-bigquery</module>
+  </modules>
+
   <reporting>
     <plugins>
       <plugin>
