--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,7 @@
     <threeten.version>1.4.1</threeten.version>
     <javax.annotations.version>1.3.2</javax.annotations.version>
     <animal-sniffer.version>1.18</animal-sniffer.version>
-    <google-api-services-bigquery.version>
-      v2-rev20191211-1.30.8
+    <google-api-services-bigquery.version>v2-rev20191211-1.30.8
     </google-api-services-bigquery.version>
     <auto-value.version>1.7</auto-value.version>
     <auto-value-annotations.version>${auto-value.version}</auto-value-annotations.version>
@@ -315,7 +314,6 @@
         <jdk>1.7</jdk>
       </activation>
       <properties>
-        <auto-value-annotations.version>1.7</auto-value-annotations.version>
         <auto-value.version>1.4</auto-value.version>
       </properties>
       <build>
