--- a/samples/snapshot/pom.xml
+++ b/samples/snapshot/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-bigquery</artifactId>
-      <version>1.110.1</version>
+      <version>1.110.2-SNAPSHOT</version>
     </dependency>
 
     <!-- Test dependencies -->
