update version update tag
Co-Authored-By: Jeff Ching <chingor@google.com>

--- a/samples/snapshot/pom.xml
+++ b/samples/snapshot/pom.xml
@@ -40,7 +40,7 @@
   </properties>
 
   <dependencies>
-    <!-- {x-version-update-start::current} -->
+    <!-- {x-version-update-start:google-cloud-bigquery:current} -->
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-bigquery</artifactId>
