specify javax version in parent pom

--- a/google-cloud-bigquery/pom.xml
+++ b/google-cloud-bigquery/pom.xml
@@ -157,7 +157,8 @@
         <dependency>
           <groupId>javax.annotation</groupId>
           <artifactId>javax.annotation-api</artifactId>
-          <version>1.3.2</version>
+          <!-- Adding version here because flatten cannot interpret this -->
+          <version>${javax.annotations.version}</version>
         </dependency>
       </dependencies>
     </profile>
