--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
+        <version>4.13</version>
         <scope>test</scope>
       </dependency>
       <dependency>
