--- a/samples/install-without-bom/pom.xml
+++ b/samples/install-without-bom/pom.xml
@@ -72,6 +72,12 @@
       <version>1.0.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-nio</artifactId>
+      <version>0.121.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <!-- compile and run all snippet tests -->
