--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -12,7 +12,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jmh.version>1.23</jmh.version>
-    <uberjar.name>benchmarks</uberjar.name>
+    <uberjar.name>benchmark</uberjar.name>
   </properties>
 
   <dependencies>
