--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,13 @@
     },
     {
       "packagePatterns": [
+        "^com.google.cloud:google-cloud-bigquery-parent",
+        "^com.google.cloud:google-cloud-bigquery"
+      ],
+      "groupName": "bigquery dependencies"
+    },
+    {
+      "packagePatterns": [
         "^com.google.api:gax",
         "^com.google.auth:",
         "^com.google.cloud:google-cloud-core",
