--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -41,7 +41,7 @@ branchProtectionRules:
 # List of explicit permissions to add (additive only)
 permissionRules:
 # Team slug to add to repository permissions
-- team: @googleapis/api-bigquery
+- team: api-bigquery
   # Access level required, one of push|pull|admin|maintain|triage
   permission: admin
 - team: yoshi-java
