--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -46,3 +46,7 @@ permissionRules:
   permission: maintain
 - team: yoshi-java
   permission: push
+- team: yoshi-admins
+  permission: admin
+- team: yoshi-java-admins
+  permission: admin
