--- a/samples/snippets/pom.xml
+++ b/samples/snippets/pom.xml
@@ -74,6 +74,12 @@
 
     <!-- Test dependencies -->
     <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-bigtable</artifactId>
+      <version>1.15.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13</version>
