ci(samples): add nightly resource cleanup

--- a/.kokoro/nightly/samples.cfg
+++ b/.kokoro/nightly/samples.cfg
@@ -36,3 +36,9 @@ env_vars: {
   key: "ENABLE_BUILD_COP"
   value: "true"
 }
+
+# Tell the trampoline which tests to run.
+env_vars: {
+    key: "TRAMPOLINE_BUILD_FILE"
+    value: "github/java-bigquery/.kokoro/run_samples_resource_cleanup.sh"
+}
