--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -1,6 +1,6 @@
 # Whether or not rebase-merging is enabled on this repository.
 # Defaults to `true`
-rebaseMergeAllowed: true
+rebaseMergeAllowed: false
 
 # Whether or not squash-merging is enabled on this repository.
 # Defaults to `true`
@@ -27,6 +27,22 @@ branchProtectionRules:
   # Require up to date branches
   requiresStrictStatusChecks: false
   # List of required status check contexts that must pass for commits to be accepted to matching branches.
+  requiredStatusCheckContexts:
+  - "dependencies (8)"
+  - "dependencies (11)"
+  - "linkage-monitor"
+  - "lint"
+  - "clirr"
+  - "units (7)"
+  - "units (8)"
+  - "units (11)"
+  - "Kokoro - Test: Integration"
+  - "cla/google"
+- pattern: 1.127.12-sp
+  isAdminEnforced: true
+  requiredApprovingReviewCount: 1
+  requiresCodeOwnerReviews: true
+  requiresStrictStatusChecks: false
   requiredStatusCheckContexts:
   - "dependencies (8)"
   - "dependencies (11)"
