--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -1,6 +1,6 @@
 # Whether or not rebase-merging is enabled on this repository.
 # Defaults to `true`
-rebaseMergeAllowed: false
+rebaseMergeAllowed: true
 
 # Whether or not squash-merging is enabled on this repository.
 # Defaults to `true`
