--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-cloud-datacatalog-v1</artifactId>
+        <version>1.3.2</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <!-- use 2.9.1 for Java 7 projects -->
