chore: update dependencyDashboard labels

--- a/renovate.json
+++ b/renovate.json
@@ -78,5 +78,8 @@
     }
   ],
   "semanticCommits": true,
-  "masterIssue": true
+  "dependencyDashboard": true,
+  "dependencyDashboardLabels": [
+    "type: process"
+  ]
 }
