--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
         <artifactId>truth</artifactId>
         <version>1.1.3</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.checkerframework</groupId>
+            <artifactId>checker-qual</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
