--- a/google-cloud-bigquery/pom.xml
+++ b/google-cloud-bigquery/pom.xml
@@ -148,6 +148,12 @@
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-bigquerystorage</artifactId>
       <version>2.0.1</version>
+      <exclusions>
+       <exclusion>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>*</artifactId>
+      </exclusion>
+    </exclusions>
     </dependency>
   </dependencies>
 
