--- a/google-cloud-bigquery/pom.xml
+++ b/google-cloud-bigquery/pom.xml
@@ -149,11 +149,14 @@
       <artifactId>google-cloud-bigquerystorage</artifactId>
       <version>2.0.1</version>
       <exclusions>
-       <exclusion>
-        <groupId>/*</groupId>
-        <artifactId>*</artifactId>
-      </exclusion>
-    </exclusions>
+        <!--
+        Excluding com.google.cloud:google-cloud-bigquery to avoid cyclic dependency
+        -->
+        <exclusion>
+          <groupId>com.google.cloud</groupId>
+          <artifactId>google-cloud-bigquery</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
