--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
         <version>1.5.7</version>
         <scope>test</scope>
       </dependency>
+      <!-- Adding checker-qual as a test dep so it will be dropped during pom flattening -->
+      <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker-qual</artifactId>
+        <version>3.8.0</version>
+        <scope>test</scope>
+      </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
