--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,6 @@
         <artifactId>truth</artifactId>
         <version>1.1.3</version>
         <scope>test</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>checker-qual</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -127,6 +121,12 @@
         <groupId>com.google.api.grpc</groupId>
         <artifactId>proto-google-cloud-datacatalog-v1</artifactId>
         <version>1.5.8</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker-qual</artifactId>
+        <version>3.8.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
