--- a/.github/release-please.yml
+++ b/.github/release-please.yml
@@ -7,6 +7,10 @@ branches:
     handleGHRelease: true
     releaseType: java-yoshi
     branch: java7
+  - bumpMinorPreMajor: true
+    handleGHRelease: true
+    releaseType: java-backport
+    branch: 2.3.x
 bumpMinorPreMajor: true
 handleGHRelease: true
 releaseType: java-yoshi
