--- a/google-cloud-bigquery/pom.xml
+++ b/google-cloud-bigquery/pom.xml
@@ -20,6 +20,7 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-core</artifactId>
+      <version>2.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.google.cloud</groupId>
