--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <github.global.server>github</github.global.server>
     <site.installationModule>google-cloud-bigquery-parent</site.installationModule>
-    <google-api-services-bigquery.version>v2-rev20211017-1.32.1
-    </google-api-services-bigquery.version>
+    <google-api-services-bigquery.version>v2-rev20211017-1.32.1</google-api-services-bigquery.version>
     <google.cloud.shared-dependencies.version>2.4.0</google.cloud.shared-dependencies.version>
   </properties>
 
