--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -16,6 +16,7 @@ branchProtectionRules:
       - units (11)
       - 'Kokoro - Test: Integration'
       - cla/google
+      - OwlBot Post Processor
   - pattern: 1.127.12-sp
     isAdminEnforced: true
     requiredApprovingReviewCount: 1
@@ -60,6 +61,7 @@ branchProtectionRules:
       - units (11)
       - 'Kokoro - Test: Integration'
       - cla/google
+      - OwlBot Post Processor
 permissionRules:
   - team: api-bigquery
     permission: admin
