--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- overriding protobuf-java version -->
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java</artifactId>
+        <version>3.16.0</version>
+      </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-shared-dependencies</artifactId>
