--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
         <version>${google-api-services-bigquery.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.9</version>
+      </dependency>
+
       <!-- Test dependencies -->
       <dependency>
         <groupId>junit</groupId>
