--- a/pom.xml
+++ b/pom.xml
@@ -66,25 +66,32 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <!-- BOM for bigquerystorage-->
+      <!--    <dependency>
+           <groupId>com.google.cloud</groupId>
+           <artifactId>libraries-bom</artifactId>
+           <version>24.2.0</version>
+           <type>pom</type>
+           <scope>import</scope>
+         </dependency>-->
+         <dependency>
+           <groupId>com.google.cloud</groupId>
+           <artifactId>google-cloud-datacatalog-bom</artifactId>
+           <version>1.6.1</version>
+           <type>pom</type>
+           <scope>import</scope>
+         </dependency>
 
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-datacatalog-bom</artifactId>
-        <version>1.6.1</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+         <dependency>
+           <groupId>org.checkerframework</groupId>
+           <artifactId>checker-compat-qual</artifactId>
+           <version>2.5.5</version>
+         </dependency>
 
-      <dependency>
-        <groupId>org.checkerframework</groupId>
-        <artifactId>checker-compat-qual</artifactId>
-        <version>2.5.5</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-bigquery</artifactId>
-        <version>2.5.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-bigquery:current} -->
+         <dependency>
+           <groupId>com.google.cloud</groupId>
+           <artifactId>google-cloud-bigquery</artifactId>
+           <version>2.5.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-bigquery:current} -->
       </dependency>
 
       <dependency>
@@ -133,6 +140,27 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <dependencies>
+    <!-- Dependency for bigquerystorage-->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-bigquerystorage</artifactId>
+      <version>2.8.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-vector</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-memory-netty</artifactId>
+      <version>5.0.0</version>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
 
   <modules>
     <module>google-cloud-bigquery</module>
