--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,12 @@
       <artifactId>arrow-memory-core</artifactId>
       <version>6.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-memory-netty</artifactId>
+      <version>7.0.0</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <modules>
