add a rule to ignore org.apache.arrow:arrow-memory-netty in maven-dependency-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,21 @@
     <module>google-cloud-bigquery</module>
   </modules>
 
+  <build>
+    <plugins>
+      <!-- This is actually a used dependency -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <configuration>
+          <ignoredUnusedDeclaredDependencies>
+            <ignoredUnusedDeclaredDependency>org.apache.arrow:arrow-memory-netty</ignoredUnusedDeclaredDependency>
+          </ignoredUnusedDeclaredDependencies>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <reporting>
     <plugins>
       <plugin>
